lab1/Test/L1-A-10-59.output
Error Type A at Line 3
Error Type B at Line 6
Error Type A at Line 16
Error Type A at Line 17
Error Type A at Line 22
Error Type B at Line 24
Error Type B at Line 28
Error Type A at Line 29
Error Type B at Line 31
Error Type B at Line 35
