lab1/Test/L1-A-10-59.cmm
int vpbdK ( struct sD3 {
}tyf3_gO2ekW ) {
  int PFo098_ldcryov = `hpgwng6lcsVWF8tc_CaX , XXI 
    [ 1798652583 ] ;
  if ( oIzceh0 )   w5czU ;
else   if < ( TOUFAteDohyIYbiDh8 )   while ( ZC1wq6Yym7oMYBi 
    )   if ( doXmORfhmBYPR9NiI ) {
  }else   return RLOW96FWhKqUTf79 || ll2bQjxEQBuza 
    && py21egeOGFSLBIERT2P >= X1opuhp6 + inDaE * - ! Etu3RU 
    ( M9GHjzOyzDHF = AhtZJE5DsK1PV != XoudP29gPqdV__ZJT 
    [ UCZr9fKYgW5h6vH = hcclvZIzMGgd4 > swXo1wQ - jLAvLoCaala 
    * ! ! ( jf35utuSf && FgJxjxzRZ92 <= MCwjLWA5 + w ( 
    m , wfVkfqNJOglyf , lLdO4e8tx = RsGMuesUJnoecXU ( 
    WHKMzSyECjf4tik && tKHB7xJCji_b <= VMdUCu * 1644575609.603876698 
    ) ) < - ehRQB0ZEu0WJS == 1327169525 ) ] / - IdAUV 
    ( %) ) . DtG_8MhNXfT1n ;
#



}
`float ;
struct rCeao53L sXoN5cDxNe8Wlc1 , COjjeihrD_wHkQynMPv 
  / 

;
int GGlkZeLTtNZk ( ) {
  int ST ;== 
:}
int IENRu0mbt3q77L9uwsF ( int F , int FrXsCpQdHKedE 
  < ) {
}
struct {
};
>= 